// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Same generated concise ts interface 1`] = `
"/*Automatically generated by expo-type-information.*/

import { ViewProps } from 'react-native';

import { NativeModule } from 'expo';
// These types haven't been defined in provided file(s).
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

export type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
};
export type TestRecord2 = {
  field1: number;
  field2: string;
};
export type TestRecordClass = {
  field1: number;
  field2: string;
};
export type StructConformingToProtocol = {
  id: string;
  someInt: number;
};
export type EmptyStruct = {};

export enum TestEnum {
  simpleCase = 'simpleCase',
  multipleCases1 = 'multipleCases1',
  multipleCases2 = 'multipleCases2',
  caseWithArgs1 = 'caseWithArgs1',
  caseWithArgs2 = 'caseWithArgs2'
}
export enum IntBackedEnum1 {
  simpleCase,
  multipleCases1,
  multipleCases2
}
export enum IntBackedEnum2 {
  simpleCase
}
export enum EventNames {}
export enum OuterNamespace {}

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  static TestStaticFunction(): string;
  TestAsyncFunction(a: number): Promise<string>;
  static TestStaticAsyncFunction(a: string): Promise<void>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

// These events may have arguments that weren't resolved!
export type TestModuleEvents = {
  event1: (...args: any[]) => void;
  event2: (...args: any[]) => void;
  event3: (...args: any[]) => void;
  globalAssignedToGlobal: (...args: any[]) => void;
  onClassEvent: (...args: any[]) => void;
  onGlobalEvent: (...args: any[]) => void;
  onNestedEvent: (...args: any[]) => void;
  onPrivateGlobalEvent: (...args: any[]) => void;
  onStaticLetEvent: (...args: any[]) => void;
  onStaticVarEvent: (...args: any[]) => void;
  onStructEvent: (...args: any[]) => void;
};

export interface ExpoWebViewProps extends ViewProps {
  url: string;
  testRecord: TestRecord;
  testRecord2: TestRecord2;
  testRecordClass: TestRecordClass;
  testEnum: TestEnum;
  onEvent1?: (event: any) => void;
  onEvent2?: (event: any) => void;
}

export declare class TestModuleNativeModuleType extends NativeModule<TestModuleEvents> {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: unknown /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): string;
  TestUnicodeCharacters(): unknown /*The type couldn't be resolved automatically.*/;
  TestUntypedFunction2(): TestEnum;
  TestObject(): object;
  TestAnyValue(): any;
  TestJsFunction(): (...args: any[]) => any;
  TestUIColor(): ColorValue;
  TestCGColor(): ColorValue;
  TestData(): Uint8Array;
  TestUntypedFunction3(): TestRecord2;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestAsyncFunctionPromiseArgument1(): Promise<string>;
  TestAsyncFunctionPromiseArgument2(): Promise<void>;
  TestAsyncFunctionPromiseArgument3(): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestUnderscore(
    url: string,
    _4: BarcodeType[]
  ): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}
"
`;

exports[`Same generated concise ts interface 2`] = `
"import React from 'react';

import {
  TestEnum,
  TestRecord2,
  BarcodeType,
  SomeParametrizedType,
  TestRecord,
  TestRecordClass,
  TestModuleEvents,
  TestModuleNativeModuleType,
  ExpoWebViewProps
} from './TestModule.generated';

import { requireNativeModule, requireNativeView } from 'expo';

const TestModule: TestModuleNativeModuleType =
  requireNativeModule<TestModuleNativeModuleType>('TestModule');

const ExpoWebView = requireNativeView<ExpoWebViewProps>('TestModule', 'ExpoWebView');

export const StringConstant: number = TestModule.StringConstant;
export const IntConstant: number = TestModule.IntConstant;
export const UntypedConstant: unknown /*The type couldn't be resolved automatically.*/ =
  TestModule.UntypedConstant;

export function SimpleFunction(a: number, b: number) {
  return TestModule.SimpleFunction(a, b);
}
export function TestUntypedFunction() {
  return TestModule.TestUntypedFunction();
}
export function TestUnicodeCharacters() {
  return TestModule.TestUnicodeCharacters();
}
export function TestUntypedFunction2() {
  return TestModule.TestUntypedFunction2();
}
export function TestObject() {
  return TestModule.TestObject();
}
export function TestAnyValue() {
  return TestModule.TestAnyValue();
}
export function TestJsFunction() {
  return TestModule.TestJsFunction();
}
export function TestUIColor() {
  return TestModule.TestUIColor();
}
export function TestCGColor() {
  return TestModule.TestCGColor();
}
export function TestData() {
  return TestModule.TestData();
}
export function TestUntypedFunction3() {
  return TestModule.TestUntypedFunction3();
}
export function TestArrays(a: number[]) {
  return TestModule.TestArrays(a);
}
export function TestDictionaries(
  a: {
    [key: number]: string;
  },
  b: {
    [key: number]: {
      [key: number]: string;
    };
  }
) {
  return TestModule.TestDictionaries(a, b);
}
export function TestParametrizedTypes(
  a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
) {
  return TestModule.TestParametrizedTypes(a);
}
export function TestTypeCombinations(a: number[][][]) {
  return TestModule.TestTypeCombinations(a);
}
export function TestFunctionReturningRecord() {
  return TestModule.TestFunctionReturningRecord();
}
export function TestFunctionReturningEnum() {
  return TestModule.TestFunctionReturningEnum();
}

export async function TestSimpleAsyncFunction(a: string, b: string) {
  return TestModule.TestSimpleAsyncFunction(a, b);
}
export async function TestAsyncFunctionPromiseArgument1() {
  return TestModule.TestAsyncFunctionPromiseArgument1();
}
export async function TestAsyncFunctionPromiseArgument2() {
  return TestModule.TestAsyncFunctionPromiseArgument2();
}
export async function TestAsyncFunctionPromiseArgument3() {
  return TestModule.TestAsyncFunctionPromiseArgument3();
}
export async function TestUnderscore(url: string, _5: BarcodeType[]) {
  return TestModule.TestUnderscore(url, _5);
}

export default function ExpoWebViewComponent(props: ExpoWebViewProps) {
  return <ExpoWebView {...props} />;
}
"
`;

exports[`Same generated full ts interface 1`] = `
{
  "commonTypesInterface": {
    "content": "// These types haven't been defined in provided file(s).
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

export type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
};
export type TestRecord2 = {
  field1: number;
  field2: string;
};
export type TestRecordClass = {
  field1: number;
  field2: string;
};
export type StructConformingToProtocol = {
  id: string;
  someInt: number;
};
export type EmptyStruct = {};

export enum TestEnum {
  simpleCase = 'simpleCase',
  multipleCases1 = 'multipleCases1',
  multipleCases2 = 'multipleCases2',
  caseWithArgs1 = 'caseWithArgs1',
  caseWithArgs2 = 'caseWithArgs2'
}
export enum IntBackedEnum1 {
  simpleCase,
  multipleCases1,
  multipleCases2
}
export enum IntBackedEnum2 {
  simpleCase
}
export enum EventNames {}
export enum OuterNamespace {}
",
    "name": "Common.types.ts",
  },
  "moduleInterfaces": [
    {
      "indexFile": {
        "content": "/*Automatically generated by expo-type-information.*/

export type * from './TestModule.types';

export { default as TestModule } from './TestModuleModule';

export { default as ExpoWebView } from './ExpoWebViewView';
",
        "name": "index.ts",
      },
      "moduleName": "TestModule",
      "moduleNativeFile": {
        "content": "/*Automatically generated by expo-type-information.*/

import { requireNativeModule, NativeModule } from 'expo';

import {
  TestEnum,
  IntBackedEnum1,
  IntBackedEnum2,
  EventNames,
  OuterNamespace,
  TestRecord,
  TestRecord2,
  TestRecordClass,
  StructConformingToProtocol,
  EmptyStruct,
  TestClassWithConstructor,
  TestBasicClass,
  TestEmptyClass,
  BarcodeType,
  SomeParametrizedType,
  TestModuleEvents
} from './TestModule.types';

export declare class TestModule extends NativeModule<TestModuleEvents> {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: unknown /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): string;
  TestUnicodeCharacters(): unknown /*The type couldn't be resolved automatically.*/;
  TestUntypedFunction2(): TestEnum;
  TestObject(): object;
  TestAnyValue(): any;
  TestJsFunction(): (...args: any[]) => any;
  TestUIColor(): ColorValue;
  TestCGColor(): ColorValue;
  TestData(): Uint8Array;
  TestUntypedFunction3(): TestRecord2;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestAsyncFunctionPromiseArgument1(): Promise<string>;
  TestAsyncFunctionPromiseArgument2(): Promise<void>;
  TestAsyncFunctionPromiseArgument3(): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestUnderscore(
    url: string,
    _6: BarcodeType[]
  ): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}

const _default: TestModule = requireNativeModule<TestModule>('TestModule');
export default _default;
",
        "name": "TestModuleModule.ts",
      },
      "moduleTypesFile": {
        "content": "/*Automatically generated by expo-type-information.*/

import './Common.types';

import { NativeModule } from 'expo';

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  static TestStaticFunction(): string;
  TestAsyncFunction(a: number): Promise<string>;
  static TestStaticAsyncFunction(a: string): Promise<void>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

// These events may have arguments that weren't resolved!
export type TestModuleEvents = {
  event1: (...args: any[]) => void;
  event2: (...args: any[]) => void;
  event3: (...args: any[]) => void;
  globalAssignedToGlobal: (...args: any[]) => void;
  onClassEvent: (...args: any[]) => void;
  onGlobalEvent: (...args: any[]) => void;
  onNestedEvent: (...args: any[]) => void;
  onPrivateGlobalEvent: (...args: any[]) => void;
  onStaticLetEvent: (...args: any[]) => void;
  onStaticVarEvent: (...args: any[]) => void;
  onStructEvent: (...args: any[]) => void;
};

export interface ExpoWebViewProps extends ViewProps {
  url: string;
  testRecord: TestRecord;
  testRecord2: TestRecord2;
  testRecordClass: TestRecordClass;
  testEnum: TestEnum;
  onEvent1?: (event: any) => void;
  onEvent2?: (event: any) => void;
}
",
        "name": "TestModule.types.ts",
      },
      "moduleViewsFiles": [
        {
          "content": "/*Automatically generated by expo-type-information.*/

import { requireNativeView } from 'expo';

import { ExpoWebViewProps } from './TestModule.types';

const ExpoWebView = requireNativeView<ExpoWebViewProps>('TestModule', 'ExpoWebView');

export default function ExpoWebViewComponent(props: ExpoWebViewProps) {
  return <ExpoWebView {...props} />;
}
",
          "name": "ExpoWebViewView.tsx",
        },
      ],
    },
    {
      "indexFile": {
        "content": "/*Automatically generated by expo-type-information.*/

export type * from './SecondTestModule.types';

export { default as SecondTestModule } from './SecondTestModuleModule';
",
        "name": "index.ts",
      },
      "moduleName": "SecondTestModule",
      "moduleNativeFile": {
        "content": "/*Automatically generated by expo-type-information.*/

import { requireNativeModule, NativeModule } from 'expo';

import {
  TestEnum,
  IntBackedEnum1,
  IntBackedEnum2,
  EventNames,
  OuterNamespace,
  TestRecord,
  TestRecord2,
  TestRecordClass,
  StructConformingToProtocol,
  EmptyStruct,
  TestClassWithConstructor,
  TestBasicClass,
  TestEmptyClass,
  BarcodeType,
  SomeParametrizedType,
  SecondTestModuleEvents
} from './SecondTestModule.types';

export declare class SecondTestModule extends NativeModule<SecondTestModuleEvents> {
  TestFunction(): string;
}

const _default: SecondTestModule = requireNativeModule<SecondTestModule>('SecondTestModule');
export default _default;
",
        "name": "SecondTestModuleModule.ts",
      },
      "moduleTypesFile": {
        "content": "/*Automatically generated by expo-type-information.*/

import './Common.types';

import { NativeModule } from 'expo';

// These events may have arguments that weren't resolved!
export type SecondTestModuleEvents = {};
",
        "name": "SecondTestModule.types.ts",
      },
      "moduleViewsFiles": [],
    },
  ],
}
`;

exports[`Same generated mock file 1`] = `
"/**
 * Automatically generated by expo-type-information.
 * 
 * This autogenerated file provides a mock for native Expo module,
 * and works out of the box with the expo jest preset.
 *  */


export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;


export type TestRecord = {
    basicString: string;
    basicStringInitialized: string;
    basicIntInferred: number;
    basicDoubleInferred: number;
    basicStringInferred: string;
    enumInferred: TestEnum;
    complexEnumInferred: TestEnum;
    recordInferred: TestRecord2;
    optionalInt?: number;
    letDoubleBinding: number;
};
export type TestRecord2 = {
    field1: number;
    field2: string;
};
export type TestRecordClass = {
    field1: number;
    field2: string;
};
export type StructConformingToProtocol = {
    id: string;
    someInt: number;
};
export type EmptyStruct = {};


export enum TestEnum {
    simpleCase = "simpleCase",
    multipleCases1 = "multipleCases1",
    multipleCases2 = "multipleCases2",
    caseWithArgs1 = "caseWithArgs1",
    caseWithArgs2 = "caseWithArgs2"
}
export enum IntBackedEnum1 {
    simpleCase,
    multipleCases1,
    multipleCases2
}
export enum IntBackedEnum2 {
    simpleCase
}
export enum EventNames {
}
export enum OuterNamespace {
}


export function SimpleFunction(a: number, b: number): number { return 0; }
export function TestUntypedFunction(): string { return ""; }
export function TestUnicodeCharacters(): unknown /*The type couldn't be resolved automatically.*/ { return; }
export function TestUntypedFunction2(): TestEnum { return TestEnum.simpleCase; }
export function TestObject(): object { return {}; }
export function TestAnyValue(): any { }
export function TestJsFunction(): (...args: any[]) => any { return () => { }; }
export function TestUIColor(): ColorValue { return "red"; }
export function TestCGColor(): ColorValue { return "red"; }
export function TestData(): Uint8Array { return []; }
export function TestUntypedFunction3(): TestRecord2 { return { field1: 0, field2: "" }; }
export function TestArrays(a: number[]): string[][] { return []; }
export function TestDictionaries(a: {
    [key: number]: string;
}, b: {
    [key: number]: {
        [key: number]: string;
    };
}): any { }
export function TestParametrizedTypes(a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>): string { return ""; }
export function TestTypeCombinations(a: number[][][]): (string | {
    [key: number]: string;
})[][] { return []; }
export function TestFunctionReturningRecord(): TestRecord { return { basicString: "", basicStringInitialized: "", basicIntInferred: 0, basicDoubleInferred: 0, basicStringInferred: "", enumInferred: TestEnum.simpleCase, complexEnumInferred: TestEnum.simpleCase, recordInferred: { field1: 0, field2: "" }, optionalInt: 0, letDoubleBinding: 0 }; }
export function TestFunctionReturningEnum(): TestEnum { return TestEnum.simpleCase; }


export async function TestSimpleAsyncFunction(a: string, b: string): Promise<string> { return ""; }
export async function TestAsyncFunctionPromiseArgument1(): Promise<string> { return ""; }
export async function TestAsyncFunctionPromiseArgument2(): Promise<void> { }
export async function TestAsyncFunctionPromiseArgument3(): Promise<unknown /*The type couldn't be resolved automatically.*/> { return; }
export async function TestUnderscore(url: string, _2: BarcodeType[]): Promise<unknown /*The type couldn't be resolved automatically.*/> { return; }


export class TestClassWithConstructor {
    constructor(a: number) { }
}
export class TestBasicClass {
    static TestStaticFunction(): string { return ""; }
    async TestAsyncFunction(a: number): Promise<string> { return ""; }
    async static TestStaticAsyncFunction(a: string): Promise<void> { }
    constructor(a: number, b: string, c: string | TestRecord) { }
}
export class TestEmptyClass {
}


export interface ExpoWebViewProps extends ViewProps {
    url: string;
    testRecord: TestRecord;
    testRecord2: TestRecord2;
    testRecordClass: TestRecordClass;
    testEnum: TestEnum;
    onEvent1?: (event: any) => void;
    onEvent2?: (event: any) => void;
}
export function ExpoWebView(props: ExpoWebViewProps) { }


"
`;

exports[`Same generated mock file JS 1`] = `
"/**
 * Automatically generated by expo-type-information.
 *
 * This autogenerated file provides a mock for native Expo module,
 * and works out of the box with the expo jest preset.
 *  */
export var TestEnum;
(function (TestEnum) {
    TestEnum["simpleCase"] = "simpleCase";
    TestEnum["multipleCases1"] = "multipleCases1";
    TestEnum["multipleCases2"] = "multipleCases2";
    TestEnum["caseWithArgs1"] = "caseWithArgs1";
    TestEnum["caseWithArgs2"] = "caseWithArgs2";
})(TestEnum || (TestEnum = {}));
export var IntBackedEnum1;
(function (IntBackedEnum1) {
    IntBackedEnum1[IntBackedEnum1["simpleCase"] = 0] = "simpleCase";
    IntBackedEnum1[IntBackedEnum1["multipleCases1"] = 1] = "multipleCases1";
    IntBackedEnum1[IntBackedEnum1["multipleCases2"] = 2] = "multipleCases2";
})(IntBackedEnum1 || (IntBackedEnum1 = {}));
export var IntBackedEnum2;
(function (IntBackedEnum2) {
    IntBackedEnum2[IntBackedEnum2["simpleCase"] = 0] = "simpleCase";
})(IntBackedEnum2 || (IntBackedEnum2 = {}));
export var EventNames;
(function (EventNames) {
})(EventNames || (EventNames = {}));
export var OuterNamespace;
(function (OuterNamespace) {
})(OuterNamespace || (OuterNamespace = {}));
export function SimpleFunction(a, b) { return 0; }
export function TestUntypedFunction() { return ""; }
export function TestUnicodeCharacters() { return; }
export function TestUntypedFunction2() { return TestEnum.simpleCase; }
export function TestObject() { return {}; }
export function TestAnyValue() { }
export function TestJsFunction() { return () => { }; }
export function TestUIColor() { return "red"; }
export function TestCGColor() { return "red"; }
export function TestData() { return []; }
export function TestUntypedFunction3() { return { field1: 0, field2: "" }; }
export function TestArrays(a) { return []; }
export function TestDictionaries(a, b) { }
export function TestParametrizedTypes(a) { return ""; }
export function TestTypeCombinations(a) { return []; }
export function TestFunctionReturningRecord() { return { basicString: "", basicStringInitialized: "", basicIntInferred: 0, basicDoubleInferred: 0, basicStringInferred: "", enumInferred: TestEnum.simpleCase, complexEnumInferred: TestEnum.simpleCase, recordInferred: { field1: 0, field2: "" }, optionalInt: 0, letDoubleBinding: 0 }; }
export function TestFunctionReturningEnum() { return TestEnum.simpleCase; }
export async function TestSimpleAsyncFunction(a, b) { return ""; }
export async function TestAsyncFunctionPromiseArgument1() { return ""; }
export async function TestAsyncFunctionPromiseArgument2() { }
export async function TestAsyncFunctionPromiseArgument3() { return; }
export async function TestUnderscore(url, _3) { return; }
export class TestClassWithConstructor {
    constructor(a) { }
}
export class TestBasicClass {
    static TestStaticFunction() { return ""; }
    async TestAsyncFunction(a) { return ""; }
    async static TestStaticAsyncFunction(a) { }
    constructor(a, b, c) { }
}
export class TestEmptyClass {
}
export function ExpoWebView(props) { }
"
`;

exports[`Same generated module file 1`] = `
"/*Automatically generated by expo-type-information.*/

import { NativeModule } from 'expo';
// These types haven't been defined in provided file(s).
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

export type TestRecord = {
  basicString: string;
  basicStringInitialized: string;
  basicIntInferred: number;
  basicDoubleInferred: number;
  basicStringInferred: string;
  enumInferred: TestEnum;
  complexEnumInferred: TestEnum;
  recordInferred: TestRecord2;
  optionalInt?: number;
  letDoubleBinding: number;
};
export type TestRecord2 = {
  field1: number;
  field2: string;
};
export type TestRecordClass = {
  field1: number;
  field2: string;
};
export type StructConformingToProtocol = {
  id: string;
  someInt: number;
};
export type EmptyStruct = {};

export enum TestEnum {
  simpleCase = 'simpleCase',
  multipleCases1 = 'multipleCases1',
  multipleCases2 = 'multipleCases2',
  caseWithArgs1 = 'caseWithArgs1',
  caseWithArgs2 = 'caseWithArgs2'
}
export enum IntBackedEnum1 {
  simpleCase,
  multipleCases1,
  multipleCases2
}
export enum IntBackedEnum2 {
  simpleCase
}
export enum EventNames {}
export enum OuterNamespace {}

export declare class TestClassWithConstructor {
  constructor(a: number);
}
export declare class TestBasicClass {
  static TestStaticFunction(): string;
  TestAsyncFunction(a: number): Promise<string>;
  static TestStaticAsyncFunction(a: string): Promise<void>;
  readonly TestIntProperty: number;
  readonly TestEitherProperty: number | string;
  readonly TestEnumProperty: TestEnum;
  readonly TestRecordProperty: TestRecord2;
  constructor(a: number, b: string, c: string | TestRecord);
}
export declare class TestEmptyClass {}

// These events may have arguments that weren't resolved!
export type TestModuleEvents = {
  event1: (...args: any[]) => void;
  event2: (...args: any[]) => void;
  event3: (...args: any[]) => void;
  globalAssignedToGlobal: (...args: any[]) => void;
  onClassEvent: (...args: any[]) => void;
  onGlobalEvent: (...args: any[]) => void;
  onNestedEvent: (...args: any[]) => void;
  onPrivateGlobalEvent: (...args: any[]) => void;
  onStaticLetEvent: (...args: any[]) => void;
  onStaticVarEvent: (...args: any[]) => void;
  onStructEvent: (...args: any[]) => void;
};

export declare class TestModuleNativeModuleType extends NativeModule<TestModuleEvents> {
  readonly StringConstant: number;
  readonly IntConstant: number;
  readonly UntypedConstant: unknown /*The type couldn't be resolved automatically.*/;
  SimpleFunction(a: number, b: number): number;
  TestUntypedFunction(): string;
  TestUnicodeCharacters(): unknown /*The type couldn't be resolved automatically.*/;
  TestUntypedFunction2(): TestEnum;
  TestObject(): object;
  TestAnyValue(): any;
  TestJsFunction(): (...args: any[]) => any;
  TestUIColor(): ColorValue;
  TestCGColor(): ColorValue;
  TestData(): Uint8Array;
  TestUntypedFunction3(): TestRecord2;
  TestArrays(a: number[]): string[][];
  TestDictionaries(
    a: {
      [key: number]: string;
    },
    b: {
      [key: number]: {
        [key: number]: string;
      };
    }
  ): any;
  TestParametrizedTypes(
    a: SomeParametrizedType<number | string, Map<Set<number>, Set<number> | Set<string>>>
  ): string;
  TestTypeCombinations(a: number[][][]): (
    | string
    | {
        [key: number]: string;
      }
  )[][];
  TestFunctionReturningRecord(): TestRecord;
  TestFunctionReturningEnum(): TestEnum;
  TestSimpleAsyncFunction(a: string, b: string): Promise<string>;
  TestAsyncFunctionPromiseArgument1(): Promise<string>;
  TestAsyncFunctionPromiseArgument2(): Promise<void>;
  TestAsyncFunctionPromiseArgument3(): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestUnderscore(
    url: string,
    _1: BarcodeType[]
  ): Promise<unknown /*The type couldn't be resolved automatically.*/>;
  TestClassWithConstructor: typeof TestClassWithConstructor;
  TestBasicClass: typeof TestBasicClass;
  TestEmptyClass: typeof TestEmptyClass;
}

const _default: TestModule;
export default _default;
"
`;

exports[`Same generated view file 1`] = `
"/*Automatically generated by expo-type-information.*/

import { ViewProps } from 'react-native';

// These types haven't been defined in provided file(s).
export type BarcodeType = unknown;
export type SomeParametrizedType<T0, T1> = unknown;

interface ExpoWebViewProps extends ViewProps {
  url: string;
  testRecord: TestRecord;
  testRecord2: TestRecord2;
  testRecordClass: TestRecordClass;
  testEnum: TestEnum;
  onEvent1?: (event: any) => void;
  onEvent2?: (event: any) => void;
}

declare const _default: React.JSXElementConstructor<ExpoWebViewProps>;

export default _default;
"
`;

exports[`Same type information 1`] = `
{
  "declaredTypeIdentifiersList": [
    "EmptyStruct",
    "EventNames",
    "IntBackedEnum1",
    "IntBackedEnum2",
    "OuterNamespace",
    "StructConformingToProtocol",
    "TestBasicClass",
    "TestClassWithConstructor",
    "TestEmptyClass",
    "TestEnum",
    "TestRecord",
    "TestRecord2",
    "TestRecordClass",
  ],
  "enums": [
    {
      "cases": [
        "simpleCase",
        "multipleCases1",
        "multipleCases2",
        "caseWithArgs1",
        "caseWithArgs2",
      ],
      "name": "TestEnum",
      "stringBacked": true,
    },
    {
      "cases": [
        "simpleCase",
        "multipleCases1",
        "multipleCases2",
      ],
      "name": "IntBackedEnum1",
      "stringBacked": false,
    },
    {
      "cases": [
        "simpleCase",
      ],
      "name": "IntBackedEnum2",
      "stringBacked": false,
    },
    {
      "cases": [],
      "name": "EventNames",
      "stringBacked": true,
    },
    {
      "cases": [],
      "name": "OuterNamespace",
      "stringBacked": true,
    },
  ],
  "inferredTypeParametersCountList": [
    [
      "Map",
      2,
    ],
    [
      "Set",
      1,
    ],
    [
      "SomeParametrizedType",
      2,
    ],
  ],
  "moduleClasses": [
    {
      "asyncFunctions": [
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "definitionOffset": 3308,
          "isStatic": false,
          "name": "TestSimpleAsyncFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 3511,
          "isStatic": false,
          "name": "TestAsyncFunctionPromiseArgument1",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 3634,
          "isStatic": false,
          "name": "TestAsyncFunctionPromiseArgument2",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 4,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 3728,
          "isStatic": false,
          "name": "TestAsyncFunctionPromiseArgument3",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 8,
          },
        },
        {
          "arguments": [
            {
              "name": "url",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": undefined,
              "type": {
                "kind": 6,
                "type": {
                  "kind": 2,
                  "type": "BarcodeType",
                },
              },
            },
          ],
          "definitionOffset": 3924,
          "isStatic": false,
          "name": "TestUnderscore",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 8,
          },
        },
      ],
      "classes": [
        {
          "asyncMethods": [],
          "constructor": {
            "arguments": [
              {
                "name": "a",
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            ],
            "definitionOffset": 4050,
          },
          "definitionOffset": 4004,
          "methods": [],
          "name": "TestClassWithConstructor",
          "properties": [],
        },
        {
          "asyncMethods": [
            {
              "arguments": [
                {
                  "name": "a",
                  "type": {
                    "kind": 0,
                    "type": 2,
                  },
                },
              ],
              "definitionOffset": 4592,
              "isStatic": false,
              "name": "TestAsyncFunction",
              "parameters": [],
              "returnType": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "arguments": [
                {
                  "name": "a",
                  "type": {
                    "kind": 0,
                    "type": 1,
                  },
                },
              ],
              "definitionOffset": 4690,
              "isStatic": true,
              "name": "TestStaticAsyncFunction",
              "parameters": [],
              "returnType": {
                "kind": 0,
                "type": 4,
              },
            },
          ],
          "constructor": {
            "arguments": [
              {
                "name": "a",
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
              {
                "name": "b",
                "type": {
                  "kind": 0,
                  "type": 1,
                },
              },
              {
                "name": "c",
                "type": {
                  "kind": 3,
                  "type": {
                    "name": "Either",
                    "types": [
                      {
                        "kind": 0,
                        "type": 1,
                      },
                      {
                        "kind": 2,
                        "type": "TestRecord",
                      },
                    ],
                  },
                },
              },
            ],
            "definitionOffset": 4152,
          },
          "definitionOffset": 4116,
          "methods": [
            {
              "arguments": [],
              "definitionOffset": 4777,
              "isStatic": true,
              "name": "TestStaticFunction",
              "parameters": [],
              "returnType": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "name": "TestBasicClass",
          "properties": [
            {
              "definitionOffset": 4256,
              "name": "TestIntProperty",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "definitionOffset": 4324,
              "name": "TestEitherProperty",
              "type": {
                "kind": 3,
                "type": {
                  "name": "Either",
                  "types": [
                    {
                      "kind": 0,
                      "type": 2,
                    },
                    {
                      "kind": 0,
                      "type": 1,
                    },
                  ],
                },
              },
            },
            {
              "definitionOffset": 4411,
              "name": "TestEnumProperty",
              "type": {
                "kind": 2,
                "type": "TestEnum",
              },
            },
            {
              "definitionOffset": 4495,
              "name": "TestRecordProperty",
              "type": {
                "kind": 2,
                "type": "TestRecord2",
              },
            },
          ],
        },
        {
          "asyncMethods": [],
          "constructor": null,
          "definitionOffset": 4875,
          "methods": [],
          "name": "TestEmptyClass",
          "properties": [],
        },
      ],
      "constants": [
        {
          "definitionOffset": 474,
          "name": "StringConstant",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "definitionOffset": 645,
          "name": "IntConstant",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "definitionOffset": 795,
          "name": "UntypedConstant",
          "type": {
            "kind": 0,
            "type": 8,
          },
        },
      ],
      "constructor": null,
      "definitionOffset": 81,
      "events": [
        "event1",
        "event2",
        "event3",
        "globalAssignedToGlobal",
        "onClassEvent",
        "onGlobalEvent",
        "onNestedEvent",
        "onPrivateGlobalEvent",
        "onStaticLetEvent",
        "onStaticVarEvent",
        "onStructEvent",
      ],
      "functions": [
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
          ],
          "definitionOffset": 841,
          "isStatic": false,
          "name": "SimpleFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1017,
          "isStatic": false,
          "name": "TestUntypedFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1173,
          "isStatic": false,
          "name": "TestUnicodeCharacters",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 8,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1375,
          "isStatic": false,
          "name": "TestUntypedFunction2",
          "parameters": [],
          "returnType": {
            "kind": 2,
            "type": "TestEnum",
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1553,
          "isStatic": false,
          "name": "TestObject",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 7,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1616,
          "isStatic": false,
          "name": "TestAnyValue",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 0,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1680,
          "isStatic": false,
          "name": "TestJsFunction",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": 6,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1748,
          "isStatic": false,
          "name": "TestUIColor",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": 0,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1803,
          "isStatic": false,
          "name": "TestCGColor",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": 0,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1858,
          "isStatic": false,
          "name": "TestData",
          "parameters": [],
          "returnType": {
            "kind": 1,
            "type": 1,
          },
        },
        {
          "arguments": [],
          "definitionOffset": 1907,
          "isStatic": false,
          "name": "TestUntypedFunction3",
          "parameters": [],
          "returnType": {
            "kind": 2,
            "type": "TestRecord2",
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 6,
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            },
          ],
          "definitionOffset": 2089,
          "isStatic": false,
          "name": "TestArrays",
          "parameters": [],
          "returnType": {
            "kind": 6,
            "type": {
              "kind": 6,
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 7,
                "type": {
                  "key": {
                    "kind": 0,
                    "type": 2,
                  },
                  "value": {
                    "kind": 0,
                    "type": 1,
                  },
                },
              },
            },
            {
              "name": "b",
              "type": {
                "kind": 7,
                "type": {
                  "key": {
                    "kind": 0,
                    "type": 2,
                  },
                  "value": {
                    "kind": 7,
                    "type": {
                      "key": {
                        "kind": 0,
                        "type": 2,
                      },
                      "value": {
                        "kind": 0,
                        "type": 1,
                      },
                    },
                  },
                },
              },
            },
          ],
          "definitionOffset": 2264,
          "isStatic": false,
          "name": "TestDictionaries",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 0,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 4,
                "type": {
                  "name": "SomeParametrizedType",
                  "types": [
                    {
                      "kind": 3,
                      "type": {
                        "name": "Either",
                        "types": [
                          {
                            "kind": 0,
                            "type": 2,
                          },
                          {
                            "kind": 0,
                            "type": 1,
                          },
                        ],
                      },
                    },
                    {
                      "kind": 4,
                      "type": {
                        "name": "Map",
                        "types": [
                          {
                            "kind": 4,
                            "type": {
                              "name": "Set",
                              "types": [
                                {
                                  "kind": 0,
                                  "type": 2,
                                },
                              ],
                            },
                          },
                          {
                            "kind": 3,
                            "type": {
                              "name": "Either",
                              "types": [
                                {
                                  "kind": 4,
                                  "type": {
                                    "name": "Set",
                                    "types": [
                                      {
                                        "kind": 0,
                                        "type": 2,
                                      },
                                    ],
                                  },
                                },
                                {
                                  "kind": 4,
                                  "type": {
                                    "name": "Set",
                                    "types": [
                                      {
                                        "kind": 0,
                                        "type": 1,
                                      },
                                    ],
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            },
          ],
          "definitionOffset": 2473,
          "isStatic": false,
          "name": "TestParametrizedTypes",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "arguments": [
            {
              "name": "a",
              "type": {
                "kind": 6,
                "type": {
                  "kind": 6,
                  "type": {
                    "kind": 6,
                    "type": {
                      "kind": 0,
                      "type": 2,
                    },
                  },
                },
              },
            },
          ],
          "definitionOffset": 2729,
          "isStatic": false,
          "name": "TestTypeCombinations",
          "parameters": [],
          "returnType": {
            "kind": 6,
            "type": {
              "kind": 6,
              "type": {
                "kind": 3,
                "type": {
                  "name": "Either",
                  "types": [
                    {
                      "kind": 0,
                      "type": 1,
                    },
                    {
                      "kind": 7,
                      "type": {
                        "key": {
                          "kind": 0,
                          "type": 2,
                        },
                        "value": {
                          "kind": 0,
                          "type": 1,
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
        },
        {
          "arguments": [],
          "definitionOffset": 2942,
          "isStatic": false,
          "name": "TestFunctionReturningRecord",
          "parameters": [],
          "returnType": {
            "kind": 2,
            "type": "TestRecord",
          },
        },
        {
          "arguments": [],
          "definitionOffset": 3119,
          "isStatic": false,
          "name": "TestFunctionReturningEnum",
          "parameters": [],
          "returnType": {
            "kind": 2,
            "type": "TestEnum",
          },
        },
      ],
      "name": "TestModule",
      "properties": [],
      "props": [],
      "views": [
        {
          "asyncFunctions": [],
          "classes": [],
          "constants": [],
          "constructor": null,
          "definitionOffset": 4938,
          "events": [
            "onEvent1",
            "onEvent2",
          ],
          "functions": [],
          "name": "ExpoWebView",
          "properties": [],
          "props": [
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 8,
                  },
                },
                {
                  "name": "url",
                  "type": {
                    "kind": 0,
                    "type": 1,
                  },
                },
              ],
              "definitionOffset": 4984,
              "name": "url",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 8,
                  },
                },
                {
                  "name": "testRecord",
                  "type": {
                    "kind": 2,
                    "type": "TestRecord",
                  },
                },
              ],
              "definitionOffset": 5168,
              "name": "testRecord",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 8,
                  },
                },
                {
                  "name": "testRecord2",
                  "type": {
                    "kind": 2,
                    "type": "TestRecord2",
                  },
                },
              ],
              "definitionOffset": 5239,
              "name": "testRecord2",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 8,
                  },
                },
                {
                  "name": "testRecordClass",
                  "type": {
                    "kind": 2,
                    "type": "TestRecordClass",
                  },
                },
              ],
              "definitionOffset": 5313,
              "name": "testRecordClass",
            },
            {
              "arguments": [
                {
                  "name": "view",
                  "type": {
                    "kind": 0,
                    "type": 8,
                  },
                },
                {
                  "name": "testEnum",
                  "type": {
                    "kind": 2,
                    "type": "TestEnum",
                  },
                },
              ],
              "definitionOffset": 5399,
              "name": "testEnum",
            },
          ],
          "views": [],
        },
      ],
    },
    {
      "asyncFunctions": [],
      "classes": [],
      "constants": [],
      "constructor": null,
      "definitionOffset": 5519,
      "events": [],
      "functions": [
        {
          "arguments": [],
          "definitionOffset": 5563,
          "isStatic": false,
          "name": "TestFunction",
          "parameters": [],
          "returnType": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "name": "SecondTestModule",
      "properties": [],
      "props": [],
      "views": [],
    },
  ],
  "records": [
    {
      "fields": [
        {
          "name": "basicString",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "basicStringInitialized",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "basicIntInferred",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "basicDoubleInferred",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "basicStringInferred",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "enumInferred",
          "type": {
            "kind": 2,
            "type": "TestEnum",
          },
        },
        {
          "name": "complexEnumInferred",
          "type": {
            "kind": 2,
            "type": "TestEnum",
          },
        },
        {
          "name": "recordInferred",
          "type": {
            "kind": 2,
            "type": "TestRecord2",
          },
        },
        {
          "name": "optionalInt",
          "type": {
            "kind": 5,
            "type": {
              "kind": 0,
              "type": 2,
            },
          },
        },
        {
          "name": "letDoubleBinding",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
      ],
      "name": "TestRecord",
    },
    {
      "fields": [
        {
          "name": "field1",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "field2",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "name": "TestRecord2",
    },
    {
      "fields": [
        {
          "name": "field1",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
        {
          "name": "field2",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
      ],
      "name": "TestRecordClass",
    },
    {
      "fields": [
        {
          "name": "id",
          "type": {
            "kind": 0,
            "type": 1,
          },
        },
        {
          "name": "someInt",
          "type": {
            "kind": 0,
            "type": 2,
          },
        },
      ],
      "name": "StructConformingToProtocol",
    },
    {
      "fields": [],
      "name": "EmptyStruct",
    },
  ],
  "typeIdentifierDefinitionList": [
    [
      "EmptyStruct",
      {
        "definition": {
          "fields": [],
          "name": "EmptyStruct",
        },
        "kind": 2,
      },
    ],
    [
      "EventNames",
      {
        "definition": {
          "cases": [],
          "name": "EventNames",
          "stringBacked": true,
        },
        "kind": 1,
      },
    ],
    [
      "IntBackedEnum1",
      {
        "definition": {
          "cases": [
            "simpleCase",
            "multipleCases1",
            "multipleCases2",
          ],
          "name": "IntBackedEnum1",
          "stringBacked": false,
        },
        "kind": 1,
      },
    ],
    [
      "IntBackedEnum2",
      {
        "definition": {
          "cases": [
            "simpleCase",
          ],
          "name": "IntBackedEnum2",
          "stringBacked": false,
        },
        "kind": 1,
      },
    ],
    [
      "OuterNamespace",
      {
        "definition": {
          "cases": [],
          "name": "OuterNamespace",
          "stringBacked": true,
        },
        "kind": 1,
      },
    ],
    [
      "StructConformingToProtocol",
      {
        "definition": {
          "fields": [
            {
              "name": "id",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "someInt",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
          ],
          "name": "StructConformingToProtocol",
        },
        "kind": 2,
      },
    ],
    [
      "TestEnum",
      {
        "definition": {
          "cases": [
            "simpleCase",
            "multipleCases1",
            "multipleCases2",
            "caseWithArgs1",
            "caseWithArgs2",
          ],
          "name": "TestEnum",
          "stringBacked": true,
        },
        "kind": 1,
      },
    ],
    [
      "TestRecord",
      {
        "definition": {
          "fields": [
            {
              "name": "basicString",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "basicStringInitialized",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "basicIntInferred",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "basicDoubleInferred",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "basicStringInferred",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
            {
              "name": "enumInferred",
              "type": {
                "kind": 2,
                "type": "TestEnum",
              },
            },
            {
              "name": "complexEnumInferred",
              "type": {
                "kind": 2,
                "type": "TestEnum",
              },
            },
            {
              "name": "recordInferred",
              "type": {
                "kind": 2,
                "type": "TestRecord2",
              },
            },
            {
              "name": "optionalInt",
              "type": {
                "kind": 5,
                "type": {
                  "kind": 0,
                  "type": 2,
                },
              },
            },
            {
              "name": "letDoubleBinding",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
          ],
          "name": "TestRecord",
        },
        "kind": 2,
      },
    ],
    [
      "TestRecord2",
      {
        "definition": {
          "fields": [
            {
              "name": "field1",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "field2",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "name": "TestRecord2",
        },
        "kind": 2,
      },
    ],
    [
      "TestRecordClass",
      {
        "definition": {
          "fields": [
            {
              "name": "field1",
              "type": {
                "kind": 0,
                "type": 2,
              },
            },
            {
              "name": "field2",
              "type": {
                "kind": 0,
                "type": 1,
              },
            },
          ],
          "name": "TestRecordClass",
        },
        "kind": 2,
      },
    ],
  ],
  "usedTypeIdentifiersList": [
    "BarcodeType",
    "Map",
    "Set",
    "SomeParametrizedType",
    "TestEnum",
    "TestRecord",
    "TestRecord2",
    "TestRecordClass",
  ],
}
`;
